<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/realEstateLightGray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_welcome_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_app"
        style="@style/real_estate_heading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintVertical_bias="0.235" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="301dp"
        android:layout_height="267dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/realestateapp" />

    <Button
        android:id="@+id/button_welcome_app"
        android:layout_width="193dp"
        android:layout_height="52dp"
        android:background="@color/realEstateTeal"
        android:text="@string/enter_app"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_welcome_app"
        app:layout_constraintVertical_bias="0.423" />

</androidx.constraintlayout.widget.ConstraintLayout>